bk_ida/gccida/g1/find_regno_fusage
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_regno_fusage/src/rtlanal.c:2363:35: error: must use 'enum' tag to refer to type 'rtx_code'
int  find_regno_fusage( rtx insn, rtx_code code, unsigned int regno) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_regno_fusage/src/rtlanal.c:2379:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)insn[4]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_regno_fusage/src/rtlanal.c:2397:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[*( unsigned __int8 *)( v12 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_regno_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_regno_fusage/src/obj/rtlanal.o] Error 1
